[package]
name = "ecies"
version = "0.1.0"
authors = ["CGair23 <chengeair23@sjtu.edu.cn>"]
description = "Elliptic Curve Integrated Encryption Scheme for secp256k1 in Rust & SGX"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"] }
rand                = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rand-sgx.git"}
# sgx_rand            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
# ring                = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/ring-sgx.git"}
ring                = { tag = "v0.16.5", git = "https://github.com/mesalock-linux/ring-sgx" }
anyhow              = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/anyhow-sgx.git"}

libsecp256k1        = { git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx.git", features = ["mesalock_sgx"] }

